--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Projetos Web do MIMO</title>
 </head>
+
 <body>
-  
+  <h1>Projetos do MIMO</h1>
+  <p>por Kauã dos Santos Silva . 09/11/2022</p>
+
+  <h2>HTML Básico</h2>
+  <a href="html-basico/index.html">Ver todos</a>
+  <h3>Fácil</h3>
+  <a href="html-basico/facil/post-twitter.html">Postagem no Twitter com botões</a>
+  <h3>Médio</h3>
+  <a href="html-basico/medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a>
+  <h3>Difícil</h3>
+  <a href="html-basico/dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a>
+
+  <br><br><br><br>
+  <p>
+    Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
+    <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
+  </p> 
 </body>
+
 </html>
