add desafios paste

--- a/html-basico/dificil/publicacao-postagem-blog.html
+++ b/html-basico/dificil/publicacao-postagem-blog.html
@@ -4,6 +4,16 @@
   <title>Página de publicação de postagem do blog</title>
 </head>
 <body>
+  <h1>CodePress</h1>
+  <a href="https://en.wikipedia.org/wiki/code">Código 101</a>
+  <a href="https://getmimo.com/r/websites/journal.com">Diário</a>
+  <a href="https://en.wikipedia.org/wiki/best_coding_practices">Melhor Prática</a>
+
+  <p>Sente-se e relaxe, pegue uma caneca de <a href="https://mimo.app/i/coffee.png">café frio</a> e aproveite o passeio</p>
+  <p>Aprendi a codificar em um dia frio de verão. Foi <a href="youtube.com/watch?v=fCV9oqtwyVA">ontem</a>...</p>
+
+  <p>Aprendi HTML Básico como colocar parágrafos, títulos, botões e links.</p>
+
   <button><strong>Salvar Rascunho</strong></button>
 
   <h3>Selecionar Tags</h3>
@@ -12,7 +22,7 @@
   <button><em>Código</em></button>
   <button>Francês</button>
   <br>
-  <button><em>Pressione o código</em></button>
+  <button><em>Code Press</em></button>
   <button><em>Aprenda a codificar </em></button>
 </body>
 </html>
