--- a/html-basico/index.html
+++ b/html-basico/index.html
@@ -15,24 +15,35 @@
 
   <p><a href="../index.html">Início</a> / <a href="index.html">HTML Básico</a></p>
 
-  <h2>Fácil</h2>
+  <h3>Fácil</h3>
   <a href="facil/titulo-loja-moveis.html">Título da loja de móveis</a>
   <br>
   <a href="facil/cotacao-noticias.html">Cotação de notícias</a>
   <br>
   <a href="facil/post-twitter.html">Postagem no Twitter com botões</a>
 
-  <h2>Médio</h2>
+  <h3>Médio</h3>
   <a href="medio/titulo-noticia.html">Título de notícias</a>
   <br>
   <a href="medio/noticias-invadidas.html">Página de notícias invadidas</a>
   <br>
   <a href="medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a>
 
-  <h2>Difícil</h2>
+  <h3>Difícil</h3>
   <a href="dificil/pagina-inicial-pessoal.html">Sua página inicial pessoal</a>
   <br>
   <a href="dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a>
+
+  <h3>Desafios</h3>
+  <a href="desafios/introducao.html">Introdução</a>
+  <br>
+  <a href="desafios/post-midia-social.html">Postagem de mídia social</a>
+  <br>
+  <a href="desafios/cotacao.html">Site de cotação</a>
+  <br>
+  <a href="desafios/quem-veste-melhor.html">Quem veste melhor página</a>
+  <br>
+  <a href="desafios/recursos-relacionados.html">Recursos relacionados</a>
 
   <br><br><br><br>
   <p>
