--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
 
   <h2>HTML Básico</h2>
   <a href="html-basico/index.html">Ver todos</a>
+  
   <h3>Fácil</h3>
   <a href="html-basico/facil/post-twitter.html">Postagem no Twitter com botões</a>
+
   <h3>Médio</h3>
   <a href="html-basico/medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a>
+
   <h3>Difícil</h3>
   <a href="html-basico/dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a>
+
+  <h3>Desafios</h3>
+  <a href="html-basico/desafios/recursos-relacionados.html">Recursos relacionados</a>
 
   <br><br><br><br>
   <p>
