Add desafios in html-intermediario

--- a/index.html
+++ b/index.html
@@ -9,29 +9,27 @@
 </head>
 
 <body>
-  <h1>Projetos do MIMO</h1>
-  <p>por Kauã dos Santos Silva . 09/11/2022</p>
+  <div>
+    <h1>Projetos do MIMO</h1>
+    <p>por Kauã dos Santos Silva . 09/11/2022</p>
+  </div>
 
-  <h2>HTML Básico</h2>
-  <a href="html-basico/index.html">Ver todos</a>
-  
-  <h3>Fácil</h3>
-  <a href="html-basico/facil/post-twitter.html">Postagem no Twitter com botões</a>
+  <div>
+    <h2>HTML Básico</h2>
+    <a href="html-basico/index.html">Ver todos os Projetos e Desafios</a>
+  </div>
 
-  <h3>Médio</h3>
-  <a href="html-basico/medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a>
+  <div>
+    <h2>HTML Intermediário</h2>
+    <a href="html-intermediario/index.html">Ver todos os Projetos e Desafios</a>
+  </div>
 
-  <h3>Difícil</h3>
-  <a href="html-basico/dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a>
-
-  <h3>Desafios</h3>
-  <a href="html-basico/desafios/recursos-relacionados.html">Recursos relacionados</a>
-
-  <br><br><br><br>
-  <p>
-    Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
-    <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
-  </p> 
+  <div>
+    <p>
+      Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
+      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
+    </p> 
+  </div>
 </body>
 
 </html>
