--- a/html-basico/index.html
+++ b/html-basico/index.html
@@ -10,46 +10,88 @@
 
 <body>
 
-  <h1>Todos os projetos do HTML Básico</h1>
-  <p>por Kauã dos Santos Silva . 09/11/2022</p>
+  <div>
+    <h1>Todos os projetos do HTML Básico</h1>
+    <p>por Kauã dos Santos Silva . 09/11/2022</p>
+  
+    <p><a href="../index.html">Início</a> / <a href="index.html">HTML Básico</a></p>
+  </div>
 
-  <p><a href="../index.html">Início</a> / <a href="index.html">HTML Básico</a></p>
+  <div>
+    <h3>Fácil</h3>
 
-  <h3>Fácil</h3>
-  <a href="facil/titulo-loja-moveis.html">Título da loja de móveis</a>
-  <br>
-  <a href="facil/cotacao-noticias.html">Cotação de notícias</a>
-  <br>
-  <a href="facil/post-twitter.html">Postagem no Twitter com botões</a>
+    <div>
+      <img src="/assets/images-html-basico/projeto-desafio/titulo-loja-moveis.svg" width="150" height="40"><br>
+      <a href="facil/titulo-loja-moveis.html">Título da loja de móveis</a>
+    </div>
 
-  <h3>Médio</h3>
-  <a href="medio/titulo-noticia.html">Título de notícias</a>
-  <br>
-  <a href="medio/noticias-invadidas.html">Página de notícias invadidas</a>
-  <br>
-  <a href="medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a>
+    <div>
+      <a href="facil/cotacao-noticias.html">Cotação de notícias</a>
+    </div>
 
-  <h3>Difícil</h3>
-  <a href="dificil/pagina-inicial-pessoal.html">Sua página inicial pessoal</a>
-  <br>
-  <a href="dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a>
+    <div>
+      <a href="facil/post-twitter.html">Postagem no Twitter com botões</a>
+    </div>
+  </div>
 
-  <h3>Desafios</h3>
-  <a href="desafios/introducao.html">Introdução</a>
-  <br>
-  <a href="desafios/post-midia-social.html">Postagem de mídia social</a>
-  <br>
-  <a href="desafios/cotacao.html">Site de cotação</a>
-  <br>
-  <a href="desafios/quem-veste-melhor.html">Quem veste melhor página</a>
-  <br>
-  <a href="desafios/recursos-relacionados.html">Recursos relacionados</a>
+  <div>
+    <h3>Médio</h3>
 
-  <br><br><br><br>
-  <p>
-    Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
-    <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
-  </p>  
+    <div>
+      <a href="medio/titulo-noticia.html">Título de notícias</a>
+    </div>
+
+    <div>
+      <a href="medio/noticias-invadidas.html">Página de notícias invadidas</a>
+    </div>
+
+    <div>
+      <a href="medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a>
+    </div>
+  </div>
+
+  <div>
+    <h3>Difícil</h3>
+
+    <div>
+      <a href="dificil/pagina-inicial-pessoal.html">Sua página inicial pessoal</a>
+    </div>
+
+    <div>
+      <a href="dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a>
+    </div>
+  </div>
+
+  <div>
+    <h3>Desafios</h3>
+
+    <div>
+      <a href="desafios/introducao.html">Introdução</a>
+    </div>
+
+    <div>
+      <a href="desafios/post-midia-social.html">Postagem de mídia social</a>
+    </div>
+
+    <div>
+      <a href="desafios/cotacao.html">Site de cotação</a>
+    </div>
+
+    <div>
+      <a href="desafios/quem-veste-melhor.html">Quem veste melhor página</a>
+    </div>
+
+    <div>
+      <a href="desafios/recursos-relacionados.html">Recursos relacionados</a>
+    </div>
+  </div>
+
+  <div>
+    <p>
+      Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
+      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
+    </p>  
+  </div>
 
 </body>
 
