--- a/html-basico/index.html
+++ b/html-basico/index.html
@@ -18,71 +18,45 @@
   </div>
 
   <div>
-    <h3>Fácil</h3>
-
     <div>
-      <img src="/assets/images-html-basico/projeto-desafio/titulo-loja-moveis.svg" width="150" height="40"><br>
-      <a href="facil/titulo-loja-moveis.html">Título da loja de móveis</a>
+      <h3>Fácil</h3>
+
+      <ul>
+        <li><a href="facil/titulo-loja-moveis.html">Título da loja de móveis</a></li>
+        <li><a href="facil/cotacao-noticias.html">Cotação de notícias</a></li>
+        <li><a href="facil/post-twitter.html">Postagem no Twitter com botões</a></li>
+      </ul> 
     </div>
 
     <div>
-      <a href="facil/cotacao-noticias.html">Cotação de notícias</a>
+      <h3>Médio</h3>
+
+      <ul>
+        <li><a href="medio/titulo-noticia.html">Título de notícias</a></li>
+        <li><a href="medio/noticias-invadidas.html">Página de notícias invadidas</a></li>
+        <li><a href="medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a></li>
+      </ul>
     </div>
 
     <div>
-      <a href="facil/post-twitter.html">Postagem no Twitter com botões</a>
-    </div>
-  </div>
+      <h3>Difícil</h3>
 
-  <div>
-    <h3>Médio</h3>
-
-    <div>
-      <a href="medio/titulo-noticia.html">Título de notícias</a>
+      <ul>
+        <li><a href="dificil/pagina-inicial-pessoal.html">Sua página inicial pessoal</a></li>
+        <li><a href="dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a></li>
+      </ul>
     </div>
 
     <div>
-      <a href="medio/noticias-invadidas.html">Página de notícias invadidas</a>
-    </div>
+      <h3>Desafios</h3>
 
-    <div>
-      <a href="medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a>
-    </div>
-  </div>
-
-  <div>
-    <h3>Difícil</h3>
-
-    <div>
-      <a href="dificil/pagina-inicial-pessoal.html">Sua página inicial pessoal</a>
-    </div>
-
-    <div>
-      <a href="dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a>
-    </div>
-  </div>
-
-  <div>
-    <h3>Desafios</h3>
-
-    <div>
-      <a href="desafios/introducao.html">Introdução</a>
-    </div>
-
-    <div>
-      <a href="desafios/post-midia-social.html">Postagem de mídia social</a>
-    </div>
-
-    <div>
-      <a href="desafios/cotacao.html">Site de cotação</a>
-    </div>
-
-    <div>
-      <a href="desafios/quem-veste-melhor.html">Quem veste melhor página</a>
-    </div>
-
-    <div>
-      <a href="desafios/recursos-relacionados.html">Recursos relacionados</a>
+      <ul>
+        <li><a href="desafios/introducao.html">Introdução</a></li>
+        <li><a href="desafios/post-midia-social.html">Postagem de mídia social</a></li>
+        <li><a href="desafios/cotacao.html">Site de cotação</a></li>
+        <li><a href="desafios/quem-veste-melhor.html">Quem veste melhor página</a></li>
+        <li><a href="desafios/recursos-relacionados.html">Recursos relacionados</a></li>
+      </ul>
     </div>
   </div>
 
