--- a/html-intermediario/index.html
+++ b/html-intermediario/index.html
@@ -7,6 +7,68 @@
   <title>HTML Intermediário</title>
 </head>
 <body>
+
+  <div>
+    <h1>Todos os projetos do HTML Intermediário</h1>
+    <p>por Kauã dos Santos Silva . 12/11/2022</p>
   
+    <p><a href="../index.html">Início</a> / <a href="index.html">HTML Intermediário</a></p>
+  </div>
+
+  <div>
+    <div>
+      <h2>Fácil</h2>
+
+      <ul>
+        <li><a href="facil/imagem-artigo-noticias.html">Imagem do artigo de notícias</a></li>
+        <li><a href="facil/pagina-inscricao.html">Página da Web de inscrição</a></li>
+        <li><a href="facil/configuracao-computador.html">Entradas de configuração do computador</a></li>
+        <li><a href="facil/noticias-esportivas.html">Site de notícias esportivas</a></li>
+        <li><a href="facil/loja-comercio-eletronico.html">Navegação da loja de comércio eletrônico</a></li>
+        <li><a href="facil/jogo-monty-hall/index.html">Jogo de Monty Hall</a></li>
+        <li><a href="facil/topicos-fret-it/index.html">Links para Tópicos Fret-it</a></li>
+      </ul>
+    </div>
+
+    <div>
+      <h2>Médio</h2>
+
+      <ul>
+        <li><a href="medio/imagem-blogs-viagem.html">Imagens de blogs de viagem</a></li>
+        <li><a href="medio/form-inscricao-boletim.html">Formulário de inscrição no boletim informativo</a></li>
+        <li><a href="medio/piadas-engracadas/index.html">Links para piadas engraçadas</a></li>
+      </ul>
+    </div>
+
+    <div>
+      <h2>Difícil</h2>
+
+      <ul>
+        <li><a href="dificil/perfil-usuario.html">Perfil do usuário com imagens</a></li>
+        <li><a href="dificil/curriculo.html">Currículo on-line</a></li>
+        <li><a href="dificil/portfolio/index.html">Site do portfólio</a></li>
+      </ul>
+    </div>
+
+    <div>
+      <h2>Desafios</h2>
+
+      <ul>
+        <li><a href="desafios/introducao.html">Introdução</a></li>
+        <li><a href="desafios/loja.html">Loja online</a></li>
+        <li><a href="desafios/post-blog.html">Postagem pessoal do blog</a></li>
+        <li><a href="desafios/detalhes-contato.html">Detalhes do contato</a></li>
+        <li><a href="desafios/secao-habilidades.html">Seção de Habilidades</a></li>
+      </ul>
+    </div>
+  </div>
+  
+  <div>
+    <p>
+      Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
+      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
+    </p>  
+  </div>
+
 </body>
 </html>
