--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   </div>
 
   <div>
+    <h2>Formulários HTML</h2>
+    <a href="html-formulario/index.html">Ver todos os Projetos e Desafios</a>
+  </div>
+
+  <div>
     <p>
       Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
       <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
