Update index.html documents adding semantic tags

--- a/html-basico/index.html
+++ b/html-basico/index.html
@@ -10,45 +10,48 @@
 
 <body>
 
-  <div>
+  <header>
     <h1>Todos os projetos do HTML Básico</h1>
-    <p>por Kauã dos Santos Silva . 09/11/2022</p>
+    <p>por Kauã dos Santos Silva &#183; <time>09/11/2022</time></p>
   
-    <p><a href="../index.html">Início</a> / <a href="index.html">HTML Básico</a></p>
-  </div>
+    <nav>
+      <a href="../index.html">Início</a> / 
+      <a href="index.html">HTML Básico</a>
+    </nav>
+  </header>
 
-  <div>
-    <div>
-      <h3>Fácil</h3>
+  <main>
+    <section>
+      <h2>Fácil</h2>
 
       <ul>
         <li><a href="facil/titulo-loja-moveis.html">Título da loja de móveis</a></li>
         <li><a href="facil/cotacao-noticias.html">Cotação de notícias</a></li>
         <li><a href="facil/post-twitter.html">Postagem no Twitter com botões</a></li>
       </ul> 
-    </div>
+    </section>
 
-    <div>
-      <h3>Médio</h3>
+    <section>
+      <h2>Médio</h2>
 
       <ul>
         <li><a href="medio/titulo-noticia.html">Título de notícias</a></li>
         <li><a href="medio/noticias-invadidas.html">Página de notícias invadidas</a></li>
         <li><a href="medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a></li>
       </ul>
-    </div>
+    </section>
 
-    <div>
-      <h3>Difícil</h3>
+    <section>
+      <h2>Difícil</h2>
 
       <ul>
         <li><a href="dificil/pagina-inicial-pessoal.html">Sua página inicial pessoal</a></li>
         <li><a href="dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a></li>
       </ul>
-    </div>
+    </section>
 
-    <div>
-      <h3>Desafios</h3>
+    <section>
+      <h2>Desafios</h2>
 
       <ul>
         <li><a href="desafios/introducao.html">Introdução</a></li>
@@ -57,15 +60,16 @@
         <li><a href="desafios/quem-veste-melhor.html">Quem veste melhor página</a></li>
         <li><a href="desafios/recursos-relacionados.html">Recursos relacionados</a></li>
       </ul>
-    </div>
-  </div>
+    </section>
+  </main>
 
-  <div>
-    <p>
-      Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
-      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
-    </p>  
-  </div>
+  <footer>
+    <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
+    <nav>
+      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> |
+      <a href="https://github.com/kauassilva">GitHub</a>
+    </nav>
+  </footer>
 
 </body>
 
