--- a/html-intermediario/index.html
+++ b/html-intermediario/index.html
@@ -8,15 +8,17 @@
 </head>
 <body>
 
-  <div>
+  <header>
     <h1>Todos os projetos do HTML Intermediário</h1>
-    <p>por Kauã dos Santos Silva . 12/11/2022</p>
+    <p>por Kauã dos Santos Silva &#183; <time>12/11/2022</time></p>
   
-    <p><a href="../index.html">Início</a> / <a href="index.html">HTML Intermediário</a></p>
-  </div>
+    <nav>
+      <a href="../index.html">Início</a> / <a href="index.html">HTML Intermediário</a>
+    </nav>
+  </header>
 
-  <div>
-    <div>
+  <main>
+    <section>
       <h2>Fácil</h2>
 
       <ul>
@@ -28,9 +30,9 @@
         <li><a href="facil/jogo-monty-hall/index.html">Jogo de Monty Hall</a></li>
         <li><a href="facil/topicos-fret-it/index.html">Links para Tópicos Fret-it</a></li>
       </ul>
-    </div>
+    </section>
 
-    <div>
+    <section>
       <h2>Médio</h2>
 
       <ul>
@@ -38,9 +40,9 @@
         <li><a href="medio/form-inscricao-boletim.html">Formulário de inscrição no boletim informativo</a></li>
         <li><a href="medio/piadas-engracadas/index.html">Links para piadas engraçadas</a></li>
       </ul>
-    </div>
+    </section>
 
-    <div>
+    <section>
       <h2>Difícil</h2>
 
       <ul>
@@ -48,9 +50,9 @@
         <li><a href="dificil/curriculo.html">Currículo on-line</a></li>
         <li><a href="dificil/portfolio/index.html">Site do portfólio</a></li>
       </ul>
-    </div>
+    </section>
 
-    <div>
+    <section>
       <h2>Desafios</h2>
 
       <ul>
@@ -60,15 +62,16 @@
         <li><a href="desafios/detalhes-contato.html">Detalhes do contato</a></li>
         <li><a href="desafios/secao-habilidades.html">Seção de Habilidades</a></li>
       </ul>
-    </div>
-  </div>
+    </section>
+  </main>
   
-  <div>
-    <p>
-      Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
-      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
-    </p>  
-  </div>
+  <footer>
+    <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
+    <nav>
+      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> |
+      <a href="https://github.com/kauassilva">GitHub</a>
+    </nav>
+  </footer>
 
 </body>
 </html>
