--- a/html-semantico/index.html
+++ b/html-semantico/index.html
@@ -2,7 +2,17 @@
 <html>
 <body>
 
-  
+  <h1>Pintura do Dia</h1>
+
+  <figure>
+    <img src="https://mimo.app/i/scream.png" width="220" height="277">
+    <figcaption>O Grito</figcaption>
+  </figure>
+
+  <details>
+    <summary>Pintado em 1893 por Edward Munch.</summary>
+    <p>A face agonizada na pintura tem se tornado uma das mais icônicas imagens da arte.</p>
+  </details>
   
 </body>
 </html>
