--- a/index.html
+++ b/index.html
@@ -9,32 +9,35 @@
 </head>
 
 <body>
-  <div>
+  <header>
     <h1>Projetos do MIMO</h1>
-    <p>por Kauã dos Santos Silva . 09/11/2022</p>
-  </div>
+    <p>por Kauã dos Santos Silva &#183; <time>09/11/2022</time></p>
+  </header>
 
-  <div>
-    <h2>HTML Básico</h2>
-    <a href="html-basico/index.html">Ver todos os Projetos e Desafios</a>
-  </div>
+  <main>
+    <section>
+      <h2>HTML Básico</h2>
+      <a href="html-basico/index.html">Ver todos os Projetos e Desafios</a>
+    </section>
 
-  <div>
-    <h2>HTML Intermediário</h2>
-    <a href="html-intermediario/index.html">Ver todos os Projetos e Desafios</a>
-  </div>
+    <section>
+      <h2>HTML Intermediário</h2>
+      <a href="html-intermediario/index.html">Ver todos os Projetos e Desafios</a>
+    </section>
 
-  <div>
-    <h2>Formulários HTML</h2>
-    <a href="html-formulario/index.html">Ver todos os Projetos e Desafios</a>
-  </div>
+    <section>
+      <h2>Formulários HTML</h2>
+      <a href="html-formulario/index.html">Ver todos os Projetos e Desafios</a>
+    </secti>
+  </main>
 
-  <div>
-    <p>
-      Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
-      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
-    </p> 
-  </div>
+  <footer>
+    <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
+    <nav>
+      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | 
+      <a href="https://github.com/kauassilva">GitHub</a>
+    </nav>
+  </footer>
 </body>
 
 </html>
