--- a/html-formulario/index.html
+++ b/html-formulario/index.html
@@ -2,33 +2,39 @@
 <html>
 <body>
 
-  <div>
+  <header>
     <h1>Todos os desafios de Formulários HTML</h1>
-    <p>por Kauã dos Santos Silva . 13/11/2022</p>
+    <p>por Kauã dos Santos Silva &#183; <time>13/11/2022</time></p>
   
-    <p><a href="../index.html">Início</a> / <a href="index.html">Formulários HTML</a></p>
-  </div>
+    <nav>
+      <a href="../index.html">Início</a> /
+      <a href="index.html">Formulários HTML</a>
+    </nav>
+  </header>
 
-  <p>Este assunto só possui Desafios.</p>
+  <p>Este assunto só possui Desafios.</p> <!-- Improviso, tenho que pensar em algo melhor -->
 
-  <div>
-    <h2>Desafios</h2>
+  <main>
+    <section>
+      <h2>Desafios</h2>
 
-    <ul>
-      <li><a href="desafios/introducao.html">Introdução</a></li>
-      <li><a href="desafios/form-assinatura-email.html">Formulário de assinatura de e-mail</a></li>
-      <li><a href="desafios/pagina-login.html">Página de login</a></li>
-      <li><a href="desafios/form-contato.html">Formulário de contato</a></li>
-      <li><a href="desafios/escrever-email.html">Escrever um email</a></li>
-    </ul>
-  </div>
+      <ul>
+        <li><a href="desafios/introducao.html">Introdução</a></li>
+        <li><a href="desafios/form-assinatura-email.html">Formulário de assinatura de e-mail</a></li>
+        <li><a href="desafios/pagina-login.html">Página de login</a></li>
+        <li><a href="desafios/form-contato.html">Formulário de contato</a></li>
+        <li><a href="desafios/escrever-email.html">Escrever um email</a></li>
+      </ul>
+    </section>
+  </main>
 
-  <div>
-    <p>
-      Copyright &copy; 2022 - by Kauã dos Santos Silva<br>
-      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | <a href="https://github.com/kauassilva">GitHub</a>
-    </p>  
-  </div>
+  <footer>
+    <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
+    <nav>
+      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> |
+      <a href="https://github.com/kauassilva">GitHub</a>
+    </nav>
+  </footer>
   
 </body>
 </html>
