Add desafios in html-semantico

--- a/html-semantico/index.html
+++ b/html-semantico/index.html
@@ -2,17 +2,39 @@
 <html>
 <body>
 
-  <h1>Pintura do Dia</h1>
+  <header>
+    <h1>Todos os desafios de Formulários HTML</h1>
+    <p>por Kauã dos Santos Silva &#183; <time>13/11/2022</time></p>
 
-  <figure>
-    <img src="https://mimo.app/i/scream.png" width="220" height="277">
-    <figcaption>O Grito</figcaption>
-  </figure>
+    <nav>
+      <a href="../index.html">Início</a> /
+      <a href="index.html">HTML Semântico</a>
+    </nav>
+  </header>
 
-  <details>
-    <summary>Pintado em 1893 por Edward Munch.</summary>
-    <p>A face agonizada na pintura tem se tornado uma das mais icônicas imagens da arte.</p>
-  </details>
+  <main>
+    <p>Este assunto só possui Desafios.</p> <!-- Improviso, tenho que pensar em algo melhor -->
+
+    <section>
+      <h2>Desafios</h2>
+
+      <ul>
+        <li><a href="desafios/introducao.html">Introdução</a></li>
+        <li><a href="desafios/trabalho-academico.html">Trabalho Acadêmico</a></li>
+        <li><a href="desafios/quadro-mensagem.html">Quadro de Mensagens</a></li>
+        <li><a href="desafios/anuncio-emprego.html">Anúncio de emprego</a></li>
+        <li><a href="desafios/poema-dia.html">Poema do dia</a></li>
+      </ul>
+    </section>
+  </main>
+
+  <footer>
+    <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
+    <nav>
+      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> |
+      <a href="https://github.com/kauassilva">GitHub</a>
+    </nav>
+  </footer>
   
 </body>
 </html>
