--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@
 
     <section>
       <h2>Formulários HTML</h2>
-      <a href="html-formulario/index.html">Ver todos os Projetos e Desafios</a>
-    </secti>
+      <a href="html-formulario/index.html">Ver todos os Desafios</a>
+    </section>
+
+    <section>
+      <h2>HTML Semântico</h2>
+      <a href="html-semantico/">Ver todos os Desafios</a>
+    </section>
   </main>
 
   <footer>
