Add acessibilidade-basica in project

--- a/acessibilidade-basica/index.html
+++ b/acessibilidade-basica/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Semântico</title>
+  <title>Noções básicas de acessibilidade</title>
 </head>
 <body>
 
   <header>
-    <h1>Todos os desafios de HTML Semântico</h1>
-    <p>por Kauã dos Santos Silva &#183; <time>13/11/2022</time></p>
+    <h1>Todos os desafios de Noções básicas de acessibilidade</h1>
+    <p>por Kauã dos Santos Silva &#183; <time>14/11/2022</time></p>
 
     <nav>
       <a href="../index.html">Início</a> /
-      <a href="index.html">HTML Semântico</a>
+      <a href="index.html">Noções básicas de acessibilidade</a>
     </nav>
   </header>
 
@@ -27,10 +27,10 @@
       <nav>
         <ul>
           <li><a href="desafios/introducao.html">Introdução</a></li>
-          <li><a href="desafios/trabalho-academico.html">Trabalho Acadêmico</a></li>
-          <li><a href="desafios/quadro-mensagem.html">Quadro de Mensagens</a></li>
-          <li><a href="desafios/anuncio-emprego.html">Anúncio de emprego</a></li>
-          <li><a href="desafios/poema-dia.html">Poema do dia</a></li>
+          <li><a href="desafios/noticias-dia.html">Notícias do dia</a></li>
+          <li><a href="desafios/poster-filme.html">Pôster do filme</a></li>
+          <li><a href="desafios/liquidacao-verao.html">Liquidação de verão</a></li>
+          <li><a href="desafios/menu-navegacao.html">Menu de navegação</a></li>
         </ul>
       </nav>
     </section>
