--- a/html-basico/index.html
+++ b/html-basico/index.html
@@ -24,47 +24,56 @@
     <section>
       <h2>Fácil</h2>
 
-      <ul>
-        <li><a href="facil/titulo-loja-moveis.html">Título da loja de móveis</a></li>
-        <li><a href="facil/cotacao-noticias.html">Cotação de notícias</a></li>
-        <li><a href="facil/post-twitter.html">Postagem no Twitter com botões</a></li>
-      </ul> 
+      <nav>
+        <ul>
+          <li><a href="facil/titulo-loja-moveis.html">Título da loja de móveis</a></li>
+          <li><a href="facil/cotacao-noticias.html">Cotação de notícias</a></li>
+          <li><a href="facil/post-twitter.html">Postagem no Twitter com botões</a></li>
+        </ul>
+      </nav>
     </section>
 
     <section>
       <h2>Médio</h2>
 
-      <ul>
-        <li><a href="medio/titulo-noticia.html">Título de notícias</a></li>
-        <li><a href="medio/noticias-invadidas.html">Página de notícias invadidas</a></li>
-        <li><a href="medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="medio/titulo-noticia.html">Título de notícias</a></li>
+          <li><a href="medio/noticias-invadidas.html">Página de notícias invadidas</a></li>
+          <li><a href="medio/link-loja-brinquedos-quebrado.html">Link de loja de brinquedos quebrado</a></li>
+        </ul>
+      </nav>
     </section>
 
     <section>
       <h2>Difícil</h2>
 
-      <ul>
-        <li><a href="dificil/pagina-inicial-pessoal.html">Sua página inicial pessoal</a></li>
-        <li><a href="dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="dificil/pagina-inicial-pessoal.html">Sua página inicial pessoal</a></li>
+          <li><a href="dificil/publicacao-postagem-blog.html">Página de publicação de postagem do blog</a></li>
+        </ul>
+      </nav>
     </section>
 
     <section>
       <h2>Desafios</h2>
 
-      <ul>
-        <li><a href="desafios/introducao.html">Introdução</a></li>
-        <li><a href="desafios/post-midia-social.html">Postagem de mídia social</a></li>
-        <li><a href="desafios/cotacao.html">Site de cotação</a></li>
-        <li><a href="desafios/quem-veste-melhor.html">Quem veste melhor página</a></li>
-        <li><a href="desafios/recursos-relacionados.html">Recursos relacionados</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="desafios/introducao.html">Introdução</a></li>
+          <li><a href="desafios/post-midia-social.html">Postagem de mídia social</a></li>
+          <li><a href="desafios/cotacao.html">Site de cotação</a></li>
+          <li><a href="desafios/quem-veste-melhor.html">Quem veste melhor página</a></li>
+          <li><a href="desafios/recursos-relacionados.html">Recursos relacionados</a></li>
+        </ul>
+      </nav>
     </section>
   </main>
 
   <footer>
     <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
+
     <nav>
       <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> |
       <a href="https://github.com/kauassilva">GitHub</a>
