--- a/index.html
+++ b/index.html
@@ -32,12 +32,18 @@
 
     <section>
       <h2>HTML Semântico</h2>
-      <a href="html-semantico/">Ver todos os Desafios</a>
+      <a href="html-semantico/index.html">Ver todos os Desafios</a>
+    </section>
+
+    <section>
+      <h2>Noções básicas de acessibilidade</h2>
+      <a href="acessibilidade-basica/index.html">Ver todos os Desafios</a>
     </section>
   </main>
 
   <footer>
     <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
+    
     <nav>
       <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | 
       <a href="https://github.com/kauassilva">GitHub</a>
