--- a/html-formulario/index.html
+++ b/html-formulario/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulários HTML</title>
+</head>
 <body>
 
   <header>
@@ -18,18 +24,21 @@
     <section>
       <h2>Desafios</h2>
 
-      <ul>
-        <li><a href="desafios/introducao.html">Introdução</a></li>
-        <li><a href="desafios/form-assinatura-email.html">Formulário de assinatura de e-mail</a></li>
-        <li><a href="desafios/pagina-login.html">Página de login</a></li>
-        <li><a href="desafios/form-contato.html">Formulário de contato</a></li>
-        <li><a href="desafios/escrever-email.html">Escrever um email</a></li>
-      </ul>
+      <nav>
+        <ul>
+          <li><a href="desafios/introducao.html">Introdução</a></li>
+          <li><a href="desafios/form-assinatura-email.html">Formulário de assinatura de e-mail</a></li>
+          <li><a href="desafios/pagina-login.html">Página de login</a></li>
+          <li><a href="desafios/form-contato.html">Formulário de contato</a></li>
+          <li><a href="desafios/escrever-email.html">Escrever um email</a></li>
+        </ul>
+      </nav>
     </section>
   </main>
 
   <footer>
     <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
+    
     <nav>
       <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> |
       <a href="https://github.com/kauassilva">GitHub</a>
