Add width in the section tags at all index.html documents

--- a/css-basico/index.html
+++ b/css-basico/index.html
@@ -5,13 +5,7 @@
 </head>
 <body>
 
-  <ol> Fazer:
-    <li class="gray-element">Fio dental</li>
-    <li>Alimentar o Gato</li>
-    <li class="gray-element">Cochilar</li>
-    <li>Planejar o Feriado</li>
-    <li class="gray-element">Pedir chá</li>
-  </ol>
+  <img src="https://mimo.app/r/lighthouse.png">
 
 </body>
 </html>
