Update index.html documents

--- a/css-basico/index.html
+++ b/css-basico/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 
-  <img src="https://mimo.app/r/lighthouse.png">
+  <h1>Destinos Exóticos</h1>
+  <img src="https://mimo.app/r/eiffel.png">
+  <img src="https://mimo.app/r/londoneye.png">
 
 </body>
 </html>
