--- a/html-basico/index.html
+++ b/html-basico/index.html
@@ -8,6 +8,9 @@
   <title>HTML Básico</title>
 
   <link rel="stylesheet" href="/styles/general.css">
+  <link rel="stylesheet" href="/styles/header.css">
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/footer.css">
 </head>
 
 <body>
@@ -15,11 +18,8 @@
   <header>
     <h1>Todos os projetos do HTML Básico</h1>
     <p>por Kauã dos Santos Silva &#183; <time>09/11/2022</time></p>
-  
-    <nav>
-      <a href="../index.html">Início</a> / 
-      <a href="index.html">HTML Básico</a>
-    </nav>
+
+    <a href="../index.html">Início</a>
   </header>
 
   <main>
@@ -77,8 +77,8 @@
     <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
 
     <nav>
-      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> |
-      <a href="https://github.com/kauassilva">GitHub</a>
+      <a href="https://www.linkedin.com/in/kaua-santos/" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/kauassilva" target="_blank">GitHub</a>
     </nav>
   </footer>
 
