--- a/html-formulario/index.html
+++ b/html-formulario/index.html
@@ -7,6 +7,9 @@
   <title>Formulários HTML</title>
 
   <link rel="stylesheet" href="/styles/general.css">
+  <link rel="stylesheet" href="/styles/header.css">
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/footer.css">
 </head>
 <body>
 
@@ -14,15 +17,10 @@
     <h1>Todos os desafios de Formulários HTML</h1>
     <p>por Kauã dos Santos Silva &#183; <time>13/11/2022</time></p>
   
-    <nav>
-      <a href="../index.html">Início</a> /
-      <a href="index.html">Formulários HTML</a>
-    </nav>
+    <a href="../index.html">Início</a>
   </header>
   
   <main>
-    <p>Este assunto só possui Desafios.</p> <!-- Improviso, tenho que pensar em algo melhor -->
-
     <section>
       <h2>Desafios</h2>
 
@@ -42,8 +40,8 @@
     <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
     
     <nav>
-      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> |
-      <a href="https://github.com/kauassilva">GitHub</a>
+      <a href="https://www.linkedin.com/in/kaua-santos/" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/kauassilva" target="_blank">GitHub</a>
     </nav>
   </footer>
   
