--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projetos Web do MIMO</title>
   
-  <link rel="stylesheet" href="styles/general.css">
+  <link rel="stylesheet" href="/styles/general.css">
+  <link rel="stylesheet" href="/styles/header.css">
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/footer.css">
 </head>
 
 <body>
   <header>
     <h1>Projetos do MIMO</h1>
     <p>por Kauã dos Santos Silva &#183; <time>09/11/2022</time></p>
+
+    <a href="index.html">Início</a>
   </header>
 
   <main>
@@ -47,8 +52,8 @@
     <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
     
     <nav>
-      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> | 
-      <a href="https://github.com/kauassilva">GitHub</a>
+      <a href="https://www.linkedin.com/in/kaua-santos/" target="_blank">LinkedIn</a> | 
+      <a href="https://github.com/kauassilva" target="_blank">GitHub</a>
     </nav>
   </footer>
 </body>
