--- a/html-intermediario/index.html
+++ b/html-intermediario/index.html
@@ -7,17 +7,17 @@
   <title>HTML Intermediário</title>
 
   <link rel="stylesheet" href="/styles/general.css">
+  <link rel="stylesheet" href="/styles/header.css">
+  <link rel="stylesheet" href="/styles/main.css">
+  <link rel="stylesheet" href="/styles/footer.css">
 </head>
 <body>
 
   <header>
     <h1>Todos os projetos do HTML Intermediário</h1>
     <p>por Kauã dos Santos Silva &#183; <time>12/11/2022</time></p>
-  
-    <nav>
-      <a href="../index.html">Início</a> /
-      <a href="index.html">HTML Intermediário</a>
-    </nav>
+
+    <a href="../index.html">Início</a>
   </header>
 
   <main>
@@ -80,8 +80,8 @@
     <p>Copyright &copy; <time>2022</time> - by Kauã dos Santos Silva</p>
     
     <nav>
-      <a href="https://www.linkedin.com/in/kaua-santos/">LinkedIn</a> |
-      <a href="https://github.com/kauassilva">GitHub</a>
+      <a href="https://www.linkedin.com/in/kaua-santos/" target="_blank">LinkedIn</a> |
+      <a href="https://github.com/kauassilva" target="_blank">GitHub</a>
     </nav>
   </footer>
 
