Fix margin at the main

--- a/css-basico/index.html
+++ b/css-basico/index.html
@@ -5,9 +5,10 @@
 </head>
 <body>
 
-  <h1>Destinos Exóticos</h1>
-  <img src="https://mimo.app/r/eiffel.png">
-  <img src="https://mimo.app/r/londoneye.png">
+  <h1>Balões do Mike</h1>
+  <img src="https://getmimo.com/r/balloons.png">
+  <br>
+  <button>Comprar balão normal</button>
 
 </body>
 </html>
